--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </section>
   <section class="container mt-5">
    
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-lg-6 col-sm-12 back">
             <img src="image4.png" class="d-block w-100">
         </div>
